Fix: Fix gap issue with reset journey button

--- a/static/style.css
+++ b/static/style.css
@@ -544,6 +544,7 @@ body::before {
 
 #reset-journey-btn {
   margin-top: 0;
+  margin-left: auto;
 }
 
 
@@ -661,4 +662,9 @@ body::before {
 
 .progress-container:hover {
     box-shadow: 0 0 5px rgba(0,0,0,0.3);
+}
+
+.top-bar-wrapper {
+    display: flex;
+    align-items: center;
 }
